@@ -1,5 +1,10 @@
 2005-11-02  Julien Puydt  <jpuydt@free.fr>
 
+	* src/dbus_component.cpp: Implemented the GetLocalAddress method of
+	the net.gnomemeeting.self interface.
+
+2005-11-02  Julien Puydt  <jpuydt@free.fr>
+
 	* src/dbus_component.cpp: Implemented the GetComment and GetLocation
 	methods of the net.gnomemeeting.self interface.
 
